FIX: Restore animation for like action on mobile
Regressed in https://github.com/discourse/discourse/commit/89a2cec7bef2321a4f633f900b2b240dd91113ce

--- a/app/assets/stylesheets/desktop/topic-post.scss
+++ b/app/assets/stylesheets/desktop/topic-post.scss
@@ -1,15 +1,3 @@
-@keyframes heartBump {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.5);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
 .wrap {
   max-width: $large-width;
 }
@@ -115,9 +103,6 @@ nav.post-controls {
           // Like button after I've liked
           .d-icon {
             color: var(--love);
-            &.has-animation {
-              animation: heartBump 0.4s;
-            }
           }
           &.d-hover {
             background: var(--primary-low);
